user-interface/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-interface-deployment
  namespace: intelligtest-namespace
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app/component: user-interface
  template:
    metadata:
      name: user-interface-pod
      labels:
        app/name: user-interface-pod
        app/component: user-interface
    spec:
      containers:
        - name: user-interface-container
          image: us-central1-docker.pkg.dev/project-97a13bd3-eba7-4d60-a63/intelligtest-repo/user-interface:v3
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
          ports:
            - containerPort: 80
