user-interface/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-interface-service
  namespace: intelligtest-namespace
spec:
  selector:
    app/component: user-interface
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
