user-interface/k8s/ingress-auth-compat.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-interface-auth-compat-ingress
  namespace: intelligtest-namespace
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: app.localtest.me
      http:
        paths:
          - path: /auth/undefined/(api/auth/.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 4001
