user-interface/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-interface-ingress
  namespace: intelligtest-namespace
spec:
  ingressClassName: nginx
  rules:
    - host: app.localtest.me
      http:
        paths:
          - path: /api/auth/check-password
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 3000
          - path: /api/auth/user
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 3000
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 4001
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway-service
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-interface-service
                port:
                  number: 80
